# PyChat

./: .env.example  .gitignore  README.md  index.html  main.py  pyproject.toml
app/core/: database.py
app/core/security/: authHandler.py  hashing.py
app/db/model/: users.py
app/db/repository/: userRepo.py
app/db/schema/: user.py
app/router/: auth.py  chat.py  protected.py
app/service/: userService.py
app/util/: init_db.py
